// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bdfCDU sc-gsTDqH bbePIP gLEXsB"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bdfCDU sc-gsTDqH cjJrSa gLEXsB"
>
  foo
</button>
`;
